@@ -1,17 +1,17 @@
 Package: soilDB
 Type: Package
 Title: Soil Database Interface
-Version: 1.5-1
-Date: 2015-02-23
-Packaged: 2015-02-23; dylan
+Version: 1.5-2
+Date: 2015-02-24
+Packaged: 2015-02-24; dylan
 Author: D.E. Beaudette and J.M. Skovlin
 Maintainer: D.E. Beaudette <dylan.beaudette@ca.usda.gov>
 Description: A collection of functions for reading data from USDA-NCSS soil databases.
 License: GPL (>= 2)
 LazyLoad: yes
 Depends: R (>= 2.15.0), aqp
-Imports: plyr, Hmisc, RCurl, XML, sp, RODBC
-Suggests: lattice, XMLSchema, SSOAP, dismo, raster, rgdal, jsonlite
+Imports: plyr, Hmisc, RCurl, XML, sp
+Suggests: lattice, XMLSchema, SSOAP, dismo, raster, rgdal, jsonlite, RODBC
 Repository: CRAN
 Additional_repositories: http://www.omegahat.org/R
 URL: http://aqp.r-forge.r-project.org/
