@@ -49,10 +49,10 @@ ORDER BY dmudesc, coiid, comppct_r DESC;"
 	channel <- odbcConnect('nasis_local', uid='NasisSqlRO', pwd='nasisRe@d0n1y')
 	
 	# exec query
-	d <- sqlQuery(channel, q, stringsAsFactors=FALSE)
+	d <- RODBC::sqlQuery(channel, q, stringsAsFactors=FALSE)
 
 	# close connection
-	odbcClose(channel)
+	RODBC::odbcClose(channel)
 	
 	# test for no data
 	if(nrow(d) == 0)
@@ -89,10 +89,10 @@ WHERE rvindicator = 1;
   channel <- odbcConnect('nasis_local', uid='NasisSqlRO', pwd='nasisRe@d0n1y') 
   
   # exec query
-  d <- sqlQuery(channel, q, stringsAsFactors=FALSE)
+  d <- RODBC::sqlQuery(channel, q, stringsAsFactors=FALSE)
   
   # close connection
-  odbcClose(channel)
+  RODBC::odbcClose(channel)
   
   # done
   return(d)
@@ -109,14 +109,14 @@ get_component_horizon_data_from_NASIS_db <- function() {
 	FROM chorizon_View_1 
 	ORDER BY coiidref, hzdept_r ASC;"
 	
-	# setup connection to our pedon database
-	channel <- odbcConnect('nasis_local', uid='NasisSqlRO', pwd='nasisRe@d0n1y')
+	# setup connection local NASIS
+	channel <- RODBC::odbcDriverConnect(connection="DSN=nasis_local;UID=NasisSqlRO;PWD=nasisRe@d0n1y")
 	
 	# exec query
-	d <- sqlQuery(channel, q, stringsAsFactors=FALSE)
+	d <- RODBC::sqlQuery(channel, q, stringsAsFactors=FALSE)
 	
 	# close connection
-	odbcClose(channel)
+	RODBC::odbcClose(channel)
 	
 	# done
 	return(d)
